--- a/ansible/app.yml
+++ b/ansible/app.yml
@@ -1,7 +1,9 @@
-# Playbook app server
+---
+
+# Playbook for app server
 
 - name: app server
-  hosts: tag_Name_app # ec2.py dynamic tag
+  hosts: tag_Name_App #ec2.py dynamic tag
   become: yes
   gather_facts: no
 
