--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,9 @@ terraform: &terraform
   context: aws
   environment:
     TF_IN_AUTOMATION: true
-    AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
-    AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
-    AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+    AWS_ACCESS_KEY_ID: AWS_ACCESS_KEY_ID
+    AWS_DEFAULT_REGION: AWS_DEFAULT_REGION
+    AWS_SECRET_ACCESS_KEY: AWS_SECRET_ACCESS_KEY
 
 # To use with Ansible
 awscli: &awscli
