--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ terraform: &terraform
   working_directory: ~/repo
   docker:
     - image: hashicorp/terraform:0.12.21
+  context: aws
   environment:
     TF_IN_AUTOMATION: true
 
@@ -22,7 +23,12 @@ jobs:
       - checkout
       - run: 
           name: init
-          command: terraform init -input=false
+          command: |
+            export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID
+            export AWS_DEFAULT_REGION=$AWS_DEFAULT_REGION
+            export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY
+            echo $AWS_DEFAULT_REGION
+            terraform init -input=false
       - persist_to_workspace:
           root: ~/repo
           paths: .
@@ -66,8 +72,7 @@ workflows:
   version: 2
   build_deploy:
     jobs:
-      - init:
-        context: aws
+      - init
       - plan:
           requires:
             - init
