--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,9 @@ terraform: &terraform
     - image: hashicorp/terraform:0.12.21
   environment:
     TF_IN_AUTOMATION: true
-    AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
-    AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
-    AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+    TF_VAR_AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+    TF_VAR_AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
+    TF_VAR_AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
 
 # To use with Ansible
 awscli: &awscli
