--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 host_key_checking = False
-private_key_file = /Users/williammr/.ssh/ansible_aws
+private_key_file = ~/.ssh/ansible_aws
 deprecation_warnings = False
 command_warnings = False
