--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,5 @@
 version: 2
 
-orbs:
-  aws-cli: circleci/aws-cli@0.1.13
-
 terraform: &terraform
   working_directory: ~/repo
   docker:
@@ -37,6 +34,11 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/repo
+      - run:
+          name: ssh-keygen
+          command: |
+            ssh-keygen -t rsa -b 4096 -f ~/.ssh/ansible_aws
+            cp -p ~/.ssh/ansible_aws.pub .
       - run:
           name: plan
           command: terraform plan
