--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,17 +61,19 @@ jobs:
           command: terraform apply -auto-approve 
       - run:
           name: show
-          command: terraform show -no-color > tfresult
+          command: |
+            ansible-playbook --version
+            terraform show -no-color > tfresult
       - store_artifacts:
           path: ~/repo/tfresult
           destination: tfresult  
-  ansible_deployment:
-    steps:
-      - attach_workspace:
-          at: ~/repo
-      - run:
-          name: ansible deployment
-          command: ansible-playbook --version
+  # ansible_deployment:
+  #   steps:
+  #     - attach_workspace:
+  #         at: ~/repo
+  #     - run:
+  #         name: ansible deployment
+  #         command: ansible-playbook --version
   destroy_app:
     <<: *terraform
     steps:
@@ -95,13 +97,13 @@ workflows:
             branches:
               only: 
                 - master
-      - ansible_deployment:
-          requires:
-            - apply
-          filters:
-            branches:
-              only:
-                - master
+      # - ansible_deployment:
+      #     requires:
+      #       - apply
+      #     filters:
+      #       branches:
+      #         only:
+      #           - master
       - destroy_app:
           filters:
             branches:
