--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,9 +67,9 @@ jobs:
       - run:
           name: ansible deployment
           command: |
-            sudo apt install python3-pip
-            pip install ansible
-            ansible-playbook --version
+            python --version
+            # pip install ansible
+            # ansible-playbook --version
   destroy_app:
     <<: *terraform
     steps:
