--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,6 +71,7 @@ jobs:
             wget https://releases.hashicorp.com/terraform/0.12.21/terraform_0.12.21_linux_amd64.zip
             unzip terraform_0.12.21_linux_amd64.zip
             ./terraform --version
+            ./terraform output db_instance_address
             ansible-playbook --version
   destroy_app:
     <<: *terraform
