--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,6 +103,8 @@ workflows:
               only:
                 - master
       - destroy_app:
+          requires:
+            - plan
           filters:
             branches:
               only:
