--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,11 +31,11 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/repo
-      - run:
-          name: ssh-keygen
-          command: |
-            ssh-keygen -t rsa -b 4096 -N '' -f ~/.ssh/ansible_aws
-            cp -p ~/.ssh/ansible_aws.pub .
+      # - run:
+      #     name: ssh-keygen
+      #     command: |
+      #       ssh-keygen -t rsa -b 4096 -N '' -f ~/.ssh/ansible_aws
+      #       cp -p ~/.ssh/ansible_aws.pub .
       - run:
           name: plan
           command: terraform plan
@@ -64,6 +64,9 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/repo
+      - run: 
+          name: private ssh key
+          command: echo $ANSIBLE_AWS > ~/.ssh/ansible_aws
       - run:
           name: ansible deployment
           command: |
