--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,7 +66,9 @@ jobs:
           at: ~/repo
       - run: 
           name: private ssh key
-          command: echo $ANSIBLE_AWS > ~/.ssh/ansible_aws
+          command: |
+            echo $ANSIBLE_AWS > ansible_aws
+            chmod 600 ansible_aws
       - run:
           name: ansible deployment
           command: |
