--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 host_key_checking = False
-private_key_file = ~/repo/ansible_aws
+#private_key_file = ~/repo/aws_ansible
 deprecation_warnings = False
 command_warnings = False
