--- a/ansible/roles/app/tasks/main.yml
+++ b/ansible/roles/app/tasks/main.yml
@@ -1,6 +1,10 @@
 ---
 # tasks file for app
 
+- name: Wait 300 seconds for target connection to become reachable/usable
+  wait_for_connection:
+    timeout: 300
+
 - name: Download nodejs repo installer
   get_url: url=https://rpm.nodesource.com/setup_13.x dest=/tmp/nodejs-repo-installer.sh
 
