--- a/ansible/roles/app/tasks/main.yml
+++ b/ansible/roles/app/tasks/main.yml
@@ -1,6 +1,8 @@
 ---
 # tasks file for app
 
+# If you need to delay the test for 60 seconds, put the following entry:
+# delay: 60, usually before the timeout entry
 - name: Wait 300 seconds for target connection to become reachable/usable
   wait_for_connection:
     timeout: 300
