--- a/ansible/roles/app/tasks/main.yml
+++ b/ansible/roles/app/tasks/main.yml
@@ -3,9 +3,10 @@
 
 # If you need to delay the test for 60 seconds, put the following entry:
 # delay: 60, usually before the timeout entry
-- name: Wait 300 seconds for target connection to become reachable/usable
+- name: Wait 900 seconds for target connection to become reachable/usable
   wait_for_connection:
-    timeout: 300
+    delay: 60
+    timeout: 900
 
 - name: Download nodejs repo installer
   get_url: url=https://rpm.nodesource.com/setup_13.x dest=/tmp/nodejs-repo-installer.sh
