--- a/ansible/app.yml
+++ b/ansible/app.yml
@@ -3,7 +3,7 @@
 # Playbook for app server
 
 - name: app server
-  hosts: tag_Name_App #ec2.py dynamic tag
+  hosts: tag_Name_App01 #ec2.py dynamic tag tag_KEY_VALUE where KEY=Name and VALUE=App01
   become: yes
   gather_facts: no
 
