--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,11 @@ terraform: &terraform
     TF_VAR_AWS_DEFAULT_REGION: $AWS_DEFAULT_REGION
     TF_VAR_AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
 
+ansible: &ansible
+  working_directory: ~/repo
+  docker:
+    - image: circleci/python:3.8.2
+
 jobs:
   init:
     <<: *terraform
@@ -55,6 +60,25 @@ jobs:
           path: ~/repo/tfresult
           destination: tfresult
 
+  wordpress_deployment:
+    <<: *ansible
+    steps:
+      - attach_workspace:
+          at: ~/repo
+      - add_ssh_keys:
+          fingerprints:
+            - "77:9b:3d:97:69:39:cc:11:0f:4a:e3:4d:3d:39:59:3b"
+      - aws-cli/setup:
+          profile-name: default
+      - run:
+          name: ansible deployment
+          command: |
+            pip install ansible
+            pip install boto
+            pip install simplejson
+            aws configure list
+            ansible-playbook -i ansible/ec2.py ansible/app.yml --user ec2-user -e wp_mysql_host=$(aws rds describe-db-instances | python3 -c 'import sys, simplejson as json; print(json.load(sys.stdin)["DBInstances"][0]["Endpoint"]["Address"])')
+
   destroy:
     <<: *terraform
     steps:
@@ -79,6 +103,15 @@ workflows:
             branches:
               only:
                 - master
+      - wordpress_deployment:
+          requires:
+            - apply
+          filters:
+            branches:
+              only:
+                - master
+          context:
+            aws
       - destroy:
           requires:
             - plan
